<resources>
    <string name="app_name">WarDroid</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="error_error_occurred">An error has occurred while refreshing</string>
    <string name="refresh">Refresh</string>

    <string name="settings_name">Notification Settings</string>
    <string name="settings_notifications_title">General</string>
    <string name="settings_enable_alerts_title">Enable Alert notifications</string>
    <string name="settings_enable_alerts_summary">This includes invasions. THIS IS IN BETA. May consume a lot of data.</string>
    <string name="settings_filter_title">Filter Settings</string>
    <string name="settings_enable_filter_title">Enable item filter</string>
    <string name="settings_enable_filters_summary">Item filters will apply to alert/invasion notifications</string>
    <string name="settings_aura">Auras</string>
    <string name="settings_blueprints">Blueprints</string>
    <string name="settings_mods">Mods</string>
    <string name="settings_resources">Resources</string>
    <string name="settings_planet_filter_title">Planets</string>
    <string name="settings_enable_planet_filter_title">Enable planet filter</string>
    <string name="settings_enable_planet_filter_summary">Filter alerts by planet</string>

    <string name="drawer_trackers_title">TRACKERS</string>
    <string name="drawer_settings_title">SETTINGS</string>
    <string name="settings_notification_settings_title">Notification Settings (EXPERIMENTAL)</string>
    <string name="settings_enable_credit_filter_title">Enable credit filter</string>
    <string name="settings_enable_credit_filter_summary">Filter alerts by credits</string>
    <string name="settings_credit_filter_title">Credits</string>
    <string name="settings_vibrate">Vibrate</string>
    <string name="settings_light">Use LED</string>
    <string name="settings_insistent">Alert until acknowledged</string>
    <string name="settings_sound">Sound</string>
    <string name="ui_marked_complete">You already marked that completed.</string>

    <string-array name="drawer_titles">
        <item>TRACKER HEADER</item>
        <item>News</item>
        <item>Alerts</item>
        <item>Invasions</item>
        <item>Sales</item>
        <item>SETTINGS HEADER</item>
        <item>Notifications</item>
    </string-array>

    <!-- DO NOT EDIT FOR TRANSLATIONS -->
    <string-array name="planet_filter_entries">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
        <item>Pluto</item>
        <item>Ceres</item>
        <item>Eris</item>
        <item>Sedna</item>
        <item>Europa</item>
    </string-array>
    <string-array name="aura_filter_entries"><item>Corrosive Projection</item>
        <item>Dead Eye</item>
        <item>Enemy Radar</item>
        <item>Energy Siphon</item>
        <item>Infested Impedance</item>
        <item>Physique</item>
        <item>Pistol Scavenger</item>
        <item>Rejuvenation</item>
        <item>Rifle Amp</item>
        <item>Rifle Scavenger</item>
        <item>Shield Disruption</item>
        <item>Shotgun Scavenger</item>
        <item>Sniper Scavenger</item>
        <item>Speed Holster</item>
        <item>Sprint Boost</item>
        <item>Steel Charge</item></string-array>
    <string-array name="bp_filter_entries"><item>Aura Trinity Helmet</item>
        <item>Aurora Frost Helmet</item>
        <item>Avalon Excalibur Helmet</item>
        <item>Backdraft Ember Helmet</item>
        <item>Bastet Valkyr Helmet</item>
        <item>Brokk Hammer Skin</item>
        <item>Ceramic Dagger</item>
        <item>Chlora Saryn Helmet</item>
        <item>Chorus Banshee Helmet</item>
        <item>Cierzo Zephyr Helmet</item>
        <item>Coil Mag Helmet</item>
        <item>Dagger Axe Skin</item>
        <item>Dark Dagger</item>
        <item>Dark Sword</item>
        <item>Esprit Vauban Helmet</item>
        <item>Essence Loki Helmet</item>
        <item>Flux Nova Helmet</item>
        <item>Forma</item>
        <item>Gambit Vauban Helmet</item>
        <item>Gauss Mag Helmet</item>
        <item>Glaive</item>
        <item>Heat Dagger</item>
        <item>Heat Sword</item>
        <item>Hemlock Saryn Helmet</item>
        <item>Jaw Sword</item>
        <item>Locust Ash Helmet</item>
        <item>Manticore Axe Skin</item>
        <item>Menticide Nyx Helmet</item>
        <item>Meridian Trinity Helmet</item>
        <item>Orokin Catalyst</item>
        <item>Orokin Reactor</item>
        <item>Oryx Oberon Helmet</item>
        <item>Pangolin Sword</item>
        <item>Pendragon Excalibur Helmet</item>
        <item>Phoenix Ember Helmet</item>
        <item>Plasma Sword</item>
        <item>Pulse Volt Helmet</item>
        <item>Quantum Nova Helmet</item>
        <item>Raknis Nekros Helmet</item>
        <item>Reverb Banshee Helmet</item>
        <item>Scorpion Ash Helmet</item>
        <item>Shroud Nekros Helmet</item>
        <item>Squall Frost Helmet</item>
        <item>Storm Volt Helmet</item>
        <item>Swindle Loki Helmet</item>
        <item>Thrak Rhino Helmet</item>
        <item>Vanguard Rhino Helmet</item>
        <item>Vauban Chassis</item>
        <item>Vauban Helmet</item>
        <item>Vauban Systems</item>
        <item>Vespa Nyx Helmet</item></string-array>
    <string-array name="mod_filter_entries"><item>Accelerated Blast</item>
        <item>Blaze</item>
        <item>Constitution</item>
        <item>Focus Energy</item>
        <item>Fortitude</item>
        <item>Hammer Shot</item>
        <item>Ice Storm</item>
        <item>Rending Strike</item>
        <item>Stunning Speed</item>
        <item>Wildfire</item></string-array>
    <string-array name="misc_filter_entries"><item>Alloy Plate</item>
        <item>Circuits</item>
        <item>Control Module</item>
        <item>Ferrite</item>
        <item>Fieldron</item>
        <item>Gallium</item>
        <item>Mutagen Mass</item>
        <item>Morphics</item>
        <item>Nano Spores</item>
        <item>Neural Sensors</item>
        <item>Neurodes</item>
        <item>Orokin Cell</item>
        <item>Plastids</item>
        <item>Polymer Bundle</item>
        <item>Rubedo</item>
        <item>Salvage</item></string-array>
</resources>
