<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="filter_enabled"
        android:dependency="alert_enabled"
        android:title="@string/settings_enable_filter_title"
        android:summary="@string/settings_enable_filters_summary" />
    <!--<CheckBoxPreference
        android:dependency="filter_enabled"
        android:key="unknown_enabled"
        android:title="Enable unknown notifications"
        android:summary="Notify on alerts/invasions that have unknown rewards"/>-->
    <com.deathsnacks.wardroid.utils.preferences.MultiSelectListPreference
        android:dependency="filter_enabled"
        android:title="@string/settings_aura"
        android:key="aura_filters"
        android:entries="@array/aura_filter_names"
        android:entryValues="@array/aura_filter_entries" />
    <com.deathsnacks.wardroid.utils.preferences.MultiSelectListPreference
        android:dependency="filter_enabled"
        android:title="@string/settings_blueprints"
        android:key="bp_filters"
        android:entries="@array/bp_filter_names"
        android:entryValues="@array/bp_filter_entries" />
    <com.deathsnacks.wardroid.utils.preferences.MultiSelectListPreference
        android:dependency="filter_enabled"
        android:title="@string/settings_mods"
        android:key="mod_filters"
        android:entries="@array/mod_filter_names"
        android:entryValues="@array/mod_filter_entries" />
    <com.deathsnacks.wardroid.utils.preferences.MultiSelectListPreference
        android:dependency="filter_enabled"
        android:title="@string/settings_resources"
        android:key="resource_filters"
        android:entries="@array/misc_filter_names"
        android:entryValues="@array/misc_filter_entries" />

    <CheckBoxPreference
        android:dependency="alert_enabled"
        android:title="@string/settings_enable_credit_filter_title"
        android:summary="@string/settings_enable_credit_filter_summary"
        android:key="credit_enabled" />
    <com.deathsnacks.wardroid.utils.preferences.IntEditTextPreference
        android:title="@string/settings_credit_filter_title"
        android:defaultValue="0"
        android:dependency="credit_enabled"
        android:key="credit_filter"
        android:inputType="number"
        android:numeric="integer" />

    <CheckBoxPreference
        android:dependency="alert_enabled"
        android:title="@string/settings_enable_planet_filter_title"
        android:summary="@string/settings_enable_planet_filter_summary"
        android:key="planet_enabled" />
    <com.deathsnacks.wardroid.utils.preferences.MultiSelectListPreference
        android:dependency="planet_enabled"
        android:title="@string/settings_planet_filter_title"
        android:key="planet_filters"
        android:entries="@array/planet_filter_names"
        android:entryValues="@array/planet_filter_entries" />

    <CheckBoxPreference
        android:dependency="alert_enabled"
        android:title="@string/settings_type_title"
        android:summary="@string/settings_type_summary"
        android:key="type_enabled" />
    <com.deathsnacks.wardroid.utils.preferences.MultiSelectListPreference
        android:dependency="type_enabled"
        android:title="@string/settings_type_filter_title"
        android:key="type_filters"
        android:entries="@array/type_filter_names"
        android:entryValues="@array/type_filter_entries" />

    <CheckBoxPreference
        android:dependency="alert_enabled"
        android:title="@string/settings_enable_custom"
        android:key="custom_enabled" />
    <Preference
        android:dependency="custom_enabled"
        android:title="@string/settings_custom_filter"
        android:key="custom_button" />
</PreferenceScreen>